kubernetes/infrastructure/base/proxmox/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxmox
  namespace: traefik
spec:
  type: ExternalName
  externalName: proxmox.theblacklodge.org
  ports:
    - port: 8006
      targetPort: 8006
