kubernetes/infrastructure/base/proxmox/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: proxmox
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`proxmox.theblacklodge.dev`)
      kind: Rule
      middlewares:
        - name: proxmox-headers
      services:
        - name: proxmox
          port: 8006
          scheme: https
          serversTransport: proxmox-transport
